src/components/header/header.scss
@import '../../utils/variables.scss';

.header {
  width: 90%;
  height: 100px;
  margin: 0 5% 0;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: transparent;
  z-index: 100;

  &-logo {
    width: 32px;
    height: 47px;
    cursor: pointer;

    svg {
      overflow: visible;
      place-items: center;

      :first-child {
        transform: translateY(0) rotate(0);
        transition: all ease-in-out 0.5s;
        z-index: 0;
      }
      :last-child {
        transform: translateX(0);
        transition: all ease-in-out 0.5s;
        z-index: 1;
      }
    }

    svg:hover {
      :first-child {
        transform: translateY(42px) rotate(-90deg);
        transition: all ease-in-out 0.5s;
      }

      :last-child {
        transform: translateX(40px);
        transition: all ease-in-out 0.5s;
      }
    }
  }

  &-toggle {
    button {
      cursor: pointer;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      width: 4rem;
      height: 4rem;
      border: 0;
      background: transparent;
      gap: 2rem;
      transform: scale(1);
      transition: all 0.3s;

      > div {
        background: $secondary-color;
        height: 3px;
        width: 100%;
        border-radius: 8px;
        transition: all 0.5s;
        transform-origin: left;

        &:last-child {
          transform: scaleX(0.5);
          transform-origin: right;
        }
      }

      &:hover {
        transform: scale(0.9);
        transition: all 0.3s;
      }
    }

    .clicked {
      button {
        padding: inherit;
      }

      div:first-child {
        transform: rotate(45deg);
        transform-origin: left top;
        transition: all 0.5s;
      }

      div:last-child {
        transform: scaleX(1) rotate(-45deg);
        transform-origin: left bottom;
        transition: all 0.5s;
      }
    }
  }
}

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
  .header {
    height: 100px;

    &-toggle {
      margin-right: 0;
    }
  }
}

